[package]
name = "skia-d3d12-swap-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5"
skia-safe = { version = "0.73", features = ["d3d"] }

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
]

[dev-dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
