[package]
name = "skia-d3d12-swap-chain"
version = "0.1.0"
edition = "2021"

[features]
default = ["windows-ui-composition", "direct-composition"]
windows-ui-composition = [
    "windows/System",
    "windows/Foundation_Numerics",
    "windows/Win32_System_WinRT_Composition",
    "windows/UI_Composition",
    "windows/UI_Composition_Desktop",
]
direct-composition = [
    "windows/Win32_Graphics_DirectComposition",
    "windows/Win32_Graphics_Direct3D11",
    "windows/Win32_Graphics_Direct2D",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5"
skia-safe = { version = "0.73", features = ["d3d"] }

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dwm",
]

[dev-dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
